--- a/Spay&Neuter.html
+++ b/Spay&Neuter.html
@@ -199,7 +199,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             Why spay or neuter?
           </p>
@@ -221,7 +221,7 @@
             When to spay or neuter.
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             When to spay or neuter?
           </p>
@@ -247,7 +247,7 @@
             time for your pet to be spay or neutered.
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             Long-Term Cost Savings
           </p>
@@ -709,7 +709,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[28px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[28px] leading-[normal] mb-[30px]"
           >
             <span class="roboto-mono hidden sm:block"
               >Choose Nebula Vets for Exceptional Spay and Neuter
