--- a/animalhealth.html
+++ b/animalhealth.html
@@ -153,7 +153,7 @@
         </div>
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
           <div
-            class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
+            class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[55px] md:pb-[80px]"
           >
             <p
               class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
@@ -162,7 +162,7 @@
               Check
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[51px] sm:mb-12"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[40px] sm:mb-10"
             >
               This comprehensive assessment involves a thorough evaluation of
               your pet's major organ systems. During this visit, we take the
@@ -196,13 +196,13 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
           >
-            Animal Health <br class="min-[400px]:hidden" />
+            Animal Health <br class="min-sm:hidden" />
             Check Exam
           </p>
           <p
-            class="my-[18px] text-[#494336] leading-[26px] text-sm sm:text-base md:text-lg lg:text-xl"
+            class="my-[30px] text-[#494336] leading-[157%] sm:leading-[26px] text-sm sm:text-base md:text-lg lg:text-xl"
           >
             During our animal health check, we perform a thorough examination
             tailored to the unique needs of each patient. Our goal is to assess
@@ -211,7 +211,9 @@
             friend is young, mature, or a senior, our veterinary professionals
             have the expertise to address their specific requirements.
           </p>
-          <p class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336]">
+          <p
+            class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336] leading-[157%] sm:leading-[26px]"
+          >
             In addition to providing routine health checks, we offer a
             comprehensive range of services to ensure the well-being of your
             pets: <br />
@@ -232,7 +234,7 @@
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 leading-[normal]"
           >
             Why Animal Health Checks Matter:
           </p>
@@ -744,12 +746,12 @@
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-4"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mb-[28px]"
           >
             Experience Exceptional Animal Health Checks at Nebula Vets:
           </p>
           <p
-            class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336] text-start leading-[21.3px] sm:leading-[26px]"
+            class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336] text-start leading-[22px] sm:leading-[26px]"
           >
             At Nebula Vets, we are committed to providing exceptional animal
             health checks that go beyond the basics. Our thorough evaluations,
@@ -763,10 +765,10 @@
     <!-- forward to seeing -->
     <section>
       <div
-        class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[106px]"
+        class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[90px]"
       >
         <div
-          class="absolute right-0 w-[300px] sm:w-[400px] md:w-[600px] bottom-0"
+          class="absolute right-0 w-[360px] sm:w-[400px] md:w-[600px] bottom-0"
         >
           <img
             class="w-full"
@@ -779,12 +781,15 @@
         >
           <div class="max-w-[867px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[25px] leading-[normal]"
             >
-              We look forward to seeing you and your pet soon!
+              We look forward to <br class="min-[400px]:hidden" />
+              seeing you and your
+              <br class="min-[400px]:hidden" />
+              pet soon!
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] !leading-[26px] mb-[38px] sm:mb-10"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[26px] mb-[42px] sm:mb-[25px]"
             >
               Schedule an animal health check at Nebula Vets today, and let us
               embark on a journey of comprehensive care for your cherished
