--- a/dental.html
+++ b/dental.html
@@ -153,7 +153,7 @@
         </div>
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
           <div
-            class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
+            class="max-w-[660px] pt-[176px] md:pt-[134px] pb-[60px] md:pb-[76px]"
           >
             <p
               class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
@@ -161,7 +161,7 @@
               Dental Care
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[51px] sm:mb-12"
+              class="text-[14.2px] sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[25px] sm:mt-7 mb-10 sm:mb-9"
             >
               At Nebula Vets, we recognize the significance of dental hygiene in
               maintaining your pet's overall health. Dental disease can have
@@ -191,16 +191,16 @@
           />
         </div>
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
+          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-16"
         >
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Dentals - Scale & Polish
             </p>
             <p
-              class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mt-5"
+              class="text-[#494336] leading-[22px] md:leading-[24px] text-sm sm:text-base md:text-lg mt-[30px]"
             >
               Dental health is a vital aspect of your pet's overall well-being.
               Just like humans, pets can experience dental problems, including
@@ -211,12 +211,12 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               When to schedule a dental consultation
             </p>
             <p
-              class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mt-5"
+              class="text-[#494336] leading-[22px] md:leading-[24px] text-sm sm:text-base md:text-lg mt-[30px]"
             >
               If you notice any signs of dental problems in your pet, such as
               bad breath, red or swollen gums, difficulty eating, or loose
@@ -228,12 +228,12 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Post Dental Care
             </p>
             <p
-              class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mt-5"
+              class="text-[#494336] leading-[22px] md:leading-[24px] text-sm sm:text-base md:text-lg mt-[30px]"
             >
               Most pets recover quickly after a dental. A little tiredness, and
               some post-anesthesia anxiety is normal. You can feed your pet the
@@ -248,7 +248,9 @@
     </section>
     <!-- health check matter -->
     <section>
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div
+        class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-[70px]"
+      >
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 hidden sm:block"
@@ -758,12 +760,12 @@
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-4"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-5 leading-[normal]"
           >
             Experience Exceptional Dental Care at Nebula Vets:
           </p>
           <p
-            class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336] text-start leading-[21.3px] sm:leading-[26px]"
+            class="text-sm sm:text-base md:text-lg text-[#494336] text-start leading-[22px] sm:leading-[24px]"
           >
             At Nebula Vets, we are committed to providing exceptional dental
             care that goes beyond a bright smile. Our comprehensive evaluations,
@@ -789,16 +791,18 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
+          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[70px] mx-auto"
         >
           <div class="max-w-[867px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-5"
             >
-              We look forward to seeing you and your pet soon!
+              We look forward to <br class="min-[400px]:hidden" />
+              seeing you and your <br class="min-[400px]:hidden" />
+              pet soon!
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] !leading-[26px] mb-[38px] sm:mb-10"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[22px] md:leading-[26px] mb-[38px] sm:mb-10"
             >
               Schedule a dental appointment at Nebula Vets today, and let us
               illuminate your pet's smile for a lifetime of dental wellness and
