--- a/diagnostics.html
+++ b/diagnostics.html
@@ -195,7 +195,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[104%] mb-5 sm:mb-[30px]"
+            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[normal] mb-5 sm:mb-[30px]"
           >
             Available Tests
           </p>
@@ -734,7 +734,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[normal] mb-[30px]"
           >
             Available Imaging
           </p>
@@ -978,7 +978,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="mb-10 text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[104%]"
+            class="mb-10 text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[normal]"
           >
             Available SNAP Tests
           </p>
