--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -190,7 +190,7 @@
         >
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Euthanasia Service
             </p>
@@ -207,7 +207,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Compassionate Support
             </p>
@@ -225,7 +225,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Open Communication
             </p>
@@ -242,7 +242,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Tailored End-of-Life Services
             </p>
@@ -258,7 +258,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Supportive Environment
             </p>
@@ -275,7 +275,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Aftercare Options
             </p>
