--- a/microchiping.html
+++ b/microchiping.html
@@ -195,7 +195,7 @@
           </p>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Identification and Reunification
             </p>
@@ -212,7 +212,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Increased Chance of Recovery
             </p>
@@ -228,7 +228,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Secure and Permanent
             </p>
@@ -244,7 +244,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Universal Recognition
             </p>
@@ -260,7 +260,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Medical Information Access
             </p>
