--- a/pharmacy.html
+++ b/pharmacy.html
@@ -193,7 +193,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-5 sm:mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-5 sm:mb-[30px]"
           >
             How it works
           </p>
@@ -742,7 +742,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[30px]"
           >
             Experience Exceptional Pharmacy Services at Nebula Vets:
           </p>
