--- a/surgery.html
+++ b/surgery.html
@@ -195,7 +195,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             Does my pet need a pre-consultation?
           </p>
@@ -209,7 +209,7 @@
             priorities throughout the entire surgical process
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             How much will it cost?
           </p>
@@ -232,7 +232,7 @@
             pre-surgical consultation with our experienced veterinarians.
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             Do you accept insurance?
           </p>
@@ -696,7 +696,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[30px]"
           >
             Choose Nebula Vets for Exceptional Surgical Care:
           </p>
