--- a/travel.html
+++ b/travel.html
@@ -189,7 +189,7 @@
         >
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Pet Travel Certificates
             </p>
@@ -205,7 +205,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Documentation Assistance
             </p>
@@ -223,7 +223,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               Domestic Travel
             </p>
@@ -238,7 +238,7 @@
           </div>
           <div>
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
               International Travel
             </p>
