--- a/vaccination.html
+++ b/vaccination.html
@@ -156,7 +156,7 @@
     <!-- hero -->
     <section>
       <div
-        class="bg-[#494336] overflow-hidden relative bg-no-repeat bg-right-bottom pt-[102px] sm:pt-[88px] lg:pt-[98px] pb-2.5 md:pb-0"
+        class="bg-[#494336] overflow-hidden relative bg-no-repeat bg-right-bottom pt-[102px] sm:pt-[88px] lg:pt-[98px]"
       >
         <div
           class="absolute right-0 max-w-[211px] sm:max-w-[350px] lg:max-w-[400px] xl:max-w-[521px]"
@@ -169,7 +169,7 @@
         </div>
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
           <div
-            class="max-w-[660px] pt-[30px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[140px] pb-[60px] min-[950px]:pb-[90px] text-[#D7D9DD]"
+            class="max-w-[660px] pt-[24px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[135px] pb-[50px] min-[950px]:pb-[78px] text-[#D7D9DD]"
           >
             <p
               class="text-[32px] sm:text-[40px] mt-40 md:mt-0 md:text-[50px] lg:text-[60px] xl:text-[70px] leading-[normal]"
@@ -177,13 +177,14 @@
               Vaccinations
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[51px] sm:mb-12"
+              class="text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[40px] sm:mb-9"
             >
               Vaccinations are key in keeping your pet healthy and preventing
-              them catching life-threatening disease. Our veterinary team is
-              dedicated to providing comprehensive vaccination services tailored
-              to your pet's individual needs and lifestyle. This includes not
-              only dogs and cats but also rabbits and ferrets.
+              them catching life-threatening disease. <br />
+              Our veterinary team is dedicated to providing comprehensive
+              vaccination services tailored to your pet's individual needs and
+              lifestyle. This includes not only dogs and cats but also rabbits
+              and ferrets.
             </p>
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
@@ -214,22 +215,26 @@
             <p class="text-2xl sm:text-3xl lg:text-[36px]">
               Why should I vaccinate my pet?
             </p>
-            <p class="sm:mt-[30px] mt-5 !leading-[157%] sm:!leading-[130%]">
+            <p
+              class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
+            >
               Vaccines are affective as the expose your pet’s immune system to
               an inactive strain of infectious agents. This assists their body
               to create immune cells that are specifically designed to respond
               effectively when exposed to the disease. Vaccines are also
               relatively painless, quick and cost-effective to administer.
             </p>
-            <p class="text-2xl sm:text-3xl lg:text-[36px] mt-10">
+            <p class="text-2xl sm:text-3xl lg:text-[36px] mt-9">
               What are core and non-core vaccines?
             </p>
-            <p class="sm:mt-[30px] mt-5 !leading-[157%] sm:!leading-[130%]">
+            <p
+              class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
+            >
               Core vaccines are often vaccines considered essential for your
               pet’s health, whilst non-core vaccines are optional, and may be
-              recommended for your pet depending on their lifestyle. Our vets
-              will discuss the suitable vaccines for your pet during the
-              consultation.
+              recommended for your pet depending on their lifestyle. <br />
+              Our vets will discuss the suitable vaccines for your pet during
+              the consultation.
             </p>
           </div>
         </div>
@@ -482,68 +487,88 @@
             <!-- slider 1 -->
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide !h-[461px] !lg:h-[471px]">
+                <div
+                  class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
+                >
                   <div
                     class="bg-[#464334] h-full pt-5 md:pt-[34px] pr-3 md:pr-5 pl-8 md:pl-[48px] pb-8 md:pb-[57px]"
                   >
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/puppies.png" alt="puppies" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient"
+                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient leading-[normal] xl:whitespace-nowrap"
                       >
                         Puppies Schedule
                       </p>
                     </div>
                     <p
-                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-4"
+                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-4 leading-[150%]"
                     >
                       8 weeks:
                     </p>
-                    <p>
+                    <p
+                      class="text-sm sm:text-base md:text-lg lg:text-xl leading-[26px]"
+                    >
                       Distemper vaccine, Leptospirosis, Bordetella vaccine, Lyme
                       vaccine & Canine Influenza Virus vaccine
                     </p>
                     <p
-                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-4"
+                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-1 leading-[150%]"
                     >
                       12 weeks:
                     </p>
-                    <p>
+                    <p
+                      class="text-sm sm:text-base md:text-lg lg:text-xl leading-[26px]"
+                    >
                       Distemper vaccine, Leptospirosis vaccine, Rabies vaccine,
                       Lyme vaccine & Canine Influenza Virus vaccine
                     </p>
                     <p
-                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-4"
+                      class="roboto text-base sm:text-xl lg:text-2xl mt-3 sm:mt-1 leading-[150%]"
                     >
                       Booster:
                     </p>
-                    <p>Once a year</p>
+                    <p
+                      class="text-sm sm:text-base md:text-lg lg:text-xl leading-[26px]"
+                    >
+                      Once a year
+                    </p>
                   </div>
                 </div>
-                <div class="swiper-slide !h-[461px] !lg:h-[471px]">
+                <div
+                  class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
+                >
                   <div
                     class="bg-[#464334] h-full pt-5 md:pt-[34px] pr-3 md:pr-5 pl-8 md:pl-[48px] pb-8 md:pb-[57px]"
                   >
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/kitten.png" alt="kitten" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient"
+                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient leading-[normal]"
                       >
                         Kitten Schedule
                       </p>
                     </div>
                     <p
-                      class="roboto text-base sm:text-xl lg:text-2xl mt-9 sm:mt-10"
+                      class="roboto text-base sm:text-xl lg:text-2xl mt-7 sm:mt-5 leading-[150%]"
                     >
                       8 weeks:
                     </p>
-                    <p>FVRCP vaccine and Leukemia vaccines</p>
                     <p
-                      class="roboto text-base sm:text-xl lg:text-2xl mt-9 sm:mt-10"
+                      class="text-sm sm:text-base md:text-lg lg:text-xl leading-[26px]"
+                    >
+                      FVRCP vaccine and Leukemia vaccines
+                    </p>
+                    <p
+                      class="roboto text-base sm:text-xl lg:text-2xl mt-9 sm:mt-10 leading-[150%]"
                     >
                       12 weeks:
                     </p>
-                    <p>FVRCP vaccine, Leukemia vaccine & Rabies vaccine</p>
+                    <p
+                      class="text-sm sm:text-base md:text-lg lg:text-xl leading-[26px]"
+                    >
+                      FVRCP vaccine, Leukemia vaccine & Rabies vaccine
+                    </p>
                   </div>
                 </div>
               </div>
@@ -558,7 +583,9 @@
           <div class="text-[#D7D9DD] mt-10 min-[700px]:mt-5">
             <div class="swiper mySwipertwo">
               <div class="swiper-wrapper">
-                <div class="swiper-slide !h-[461px] !lg:h-[471px]">
+                <div
+                  class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
+                >
                   <div
                     class="bg-[#464334] h-full pt-5 md:pt-[34px] pr-3 md:pr-5 pl-8 md:pl-[48px] pb-8 md:pb-[57px]"
                   >
@@ -584,7 +611,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="swiper-slide !h-[461px] !lg:h-[471px]">
+                <div
+                  class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
+                >
                   <div
                     class="bg-[#464334] h-full pt-5 md:pt-[34px] pr-3 md:pr-5 pl-8 md:pl-[48px] pb-8 md:pb-[57px]"
                   >
@@ -632,21 +661,26 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
+          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[55px] sm:pt-[70px] sm:pb-10 mx-auto"
         >
           <div class="max-w-[867px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-5"
             >
-              We look forward to seeing you and your pet soon!
+              We look forward to <br class="min-[400px]:hidden" />
+              seeing you and your
+              <br class="min-[400px]:hidden" />
+              pet soon!
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] !leading-[26px] mb-[38px] sm:mb-10"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[22px] sm:leading-[26px] mb-[36px] sm:mb-9"
             >
-              Schedule an animal health check at Nebula Vets today, and let us
-              embark on a journey of comprehensive care for your cherished
-              companion. Together, we will nurture their health and happiness,
-              one check-up at a time.
+              If you have any questions or concerns about vaccinations or would
+              like to schedule an appointment for your pet, please contact our
+              friendly team at [Your Veterinary Practice]. We are here to
+              provide your furry family members with the highest standard of
+              care and protection through our comprehensive vaccination
+              services.
             </p>
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
