--- a/emergencycare.html
+++ b/emergencycare.html
@@ -192,7 +192,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[130px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
           >
             Urgent & Emergency Care during open hours
           </p>
@@ -224,7 +224,7 @@
             arrive.
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%] mt-[35px] sm:mt-[40px] mb-[20px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[35px] sm:mt-[40px] mb-[20px]"
           >
             Outside open hours
           </p>
@@ -236,7 +236,7 @@
             Their number is 123456
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%] mt-[35px] sm:mt-[40px] mb-[20px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[35px] sm:mt-[40px] mb-[20px]"
           >
             Reasons to seek Urgent or Emergency care
           </p>
