--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -200,7 +200,7 @@
             Wellness with Advanced Healing
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[20px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
           >
             What is Laser Therapy?
           </p>
@@ -215,7 +215,7 @@
             treatments to provide comprehensive care.
           </p>
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[104%] mb-[20px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
           >
             How Does Laser Therapy Work?
           </p>
@@ -743,7 +743,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[28px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[28px] leading-[normal] mb-[30px]"
           >
             Experience Laser Therapy at Nebula Vets:
           </p>
