--- a/skin&dermatology.html
+++ b/skin&dermatology.html
@@ -766,7 +766,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[28px] leading-[104%] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-[28px] leading-[normal] mb-[30px]"
           >
             Nebula Vets’ Difference in Dermatology and Skin Care:
           </p>
