--- a/telemedicine.html
+++ b/telemedicine.html
@@ -194,7 +194,7 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[130px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
           >
             Why use Telemedicine
           </p>
@@ -209,7 +209,7 @@
             platform.
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[104%] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
           >
             During the online consultation
           </p>
